add new functions and css file to project

--- a/index.html
+++ b/index.html
@@ -1,9 +1,33 @@
 <head>
-    <script type="text/javascript" src="utils.js"></script>
-</head>
+   <link rel="stylesheet" type="text/css" href="_1projeto/centro.css">
+   <script type="text/javascript" src="utils.js"></script>
+
+ </head>
 <body>
+
     <script type="text/javascript">
-    var multiplication = multiplyTwoNumbers(45,11);
-    console.log(multiplication);
-    </script>
+    var multiplication = multiplyTwoNumbers(12,11);
+      console.log(multiplication);
+    var message = ('Hello World')
+    function showName (start) {console.log(message); }
+    var division = divideTwoNumbers(22,23);
+      console.log(division);
+    var sum = sumTwoNumers(255,134);
+        console.log(sum);
+    function destruirSistema(){
+        window.alert ('Sistema Destruído')
+      }
+  </script>
+  <h1>DESTRUA O SISTEMA </h1>
+<div id="left.css">
+</div>
+
+
+  <div id="center.css">
+
+
+
+        <h2>Ajude o menino Lennon a destruir o Sistema </h2>
+        <img src='sus.png' onclick="destruirSistema()"/>
+</div>
 </body>
